--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <meta name="msapplication-navbutton-color" content="#ffffff"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="description" content="ILog by Imesh Chamara 2019"/>
   </head>
   <body>
